streamlined User REST API, ability to add/remove users from FE

--- a/web/partials/users.html
+++ b/web/partials/users.html
@@ -1,6 +1,20 @@
 <div>
     Users
-    <ul>
-        <li data-ng-repeat="user in users">{{user.name}}&nbsp;&lt;{{user.email}}&gt;</li>
-    </ul>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Action</th>
+        </tr>
+        <tr data-ng-repeat="user in users">
+            <td>{{user.name}}</td>
+            <td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
+            <td><button ng-click="deleteUser(user)">Delete</button></td>
+        </tr>
+        <tr>
+            <td><input ng-model="newUser.name" /></td>
+            <td><input ng-model="newUser.email" /></td>
+            <td><button ng-click="addUser(newUser)">Create</button></td>
+        </tr>
+    </table>
 </div>
