Order stuff: JSON transformation, basic DB operations, basic REST API

--- a/web/partials/orders.html
+++ b/web/partials/orders.html
@@ -1,3 +1,21 @@
 <div>
+    <div><a href="#/users">Back to user list</a></div>
     Orders for user {{user.name}}
+    <table>
+        <tr>
+            <th>Date</th>
+            <th>Description</th>
+            <th>Action</th>
+        </tr>
+        <tr ng-repeat="order in orders">
+            <td>{{order.date}}</td>
+            <td>{{order.description}}</td>
+            <td><button ng-click="deleteOrder(order)">Delete</button></td>
+        </tr>
+        <tr>
+            <td><input ng-model="newOrder.date" /></td>
+            <td><input ng-model="newOrder.description" /></td>
+            <td><button ng-click="addOrder(newOrder)">Add order</button></td>
+        </tr>
+    </table>
 </div>
