--- a/web/partials/orders.html
+++ b/web/partials/orders.html
@@ -1,6 +1,25 @@
 <div>
     <div><a href="#/users">Back to user list</a></div>
-    Orders for user {{user.name}}
+    Orders for user {{orderData.user.name}}<br />
+    Next week
+    <table>
+        <tr>
+            <th>Date</th>
+            <th>Description</th>
+        </tr>
+        <tr ng-repeat="order in orderData.nextWeekOrders">
+            <td>{{order.date | date:'EEEE, dd.MM.yyyy'}}</td>
+            <td>
+                <select ng-model="order.description"
+                        ng-options="desc for desc in orderData.availableOrderDescriptions">
+                    <option value=""></option>
+                </select>
+            </td>
+        </tr>
+    </table>
+    <button ng-click="saveNextWeekOrders()">Save</button>
+
+    <!--
     <table>
         <tr>
             <th>Date</th>
@@ -17,5 +36,5 @@
             <td><input ng-model="newOrder.description" /></td>
             <td><button ng-click="addOrder(newOrder)">Add order</button></td>
         </tr>
-    </table>
+    </table>-->
 </div>
