--- a/web/partials/orders.html
+++ b/web/partials/orders.html
@@ -1,6 +1,26 @@
 <div>
     <div><a href="#/users">Back to user list</a></div>
     Orders for user {{orderData.user.name}}<br />
+
+    This week
+    <table>
+        <tr>
+            <th>Date</th>
+            <th>Description</th>
+        </tr>
+        <tr ng-repeat="order in orderData.thisWeekOrders">
+            <td>{{order.date | date:'EEEE, dd.MM.yyyy'}}</td>
+            <td>
+                <select ng-model="order.description"
+                        ng-options="desc for desc in orderData.availableOrderDescriptions">
+                    <option value=""></option>
+                </select>
+            </td>
+        </tr>
+    </table>
+    <button ng-click="saveOrders(orderData.thisWeekOrders)">Save</button>
+    <br />
+
     Next week
     <table>
         <tr>
@@ -17,7 +37,7 @@
             </td>
         </tr>
     </table>
-    <button ng-click="saveNextWeekOrders()">Save</button>
+    <button ng-click="saveOrders(orderData.nextWeekOrders)">Save</button>
 
     <!--
     <table>
