Do not show "this week" if it's Saturday or Sunday

--- a/web/partials/orders.html
+++ b/web/partials/orders.html
@@ -2,25 +2,26 @@
     <div><a href="#/users">Back to user list</a></div>
     Orders for user {{orderData.user.name}}<br />
 
-    This week
-    <table>
-        <tr>
-            <th>Date</th>
-            <th>Description</th>
-        </tr>
-        <tr ng-repeat="order in orderData.thisWeekOrders">
-            <td>{{order.date | date:'EEEE, dd.MM.yyyy'}}</td>
-            <td>
-                <select ng-model="order.description"
-                        ng-options="desc for desc in orderData.availableOrderDescriptions">
-                    <option value=""></option>
-                </select>
-            </td>
-        </tr>
-    </table>
-    <button ng-click="saveOrders(orderData.thisWeekOrders)">Save</button>
-    <button ng-click="sendThisWeekEmail()">Send email</button>
-    <br />
+    <div ng-show="orderData.thisWeekOrders.length > 0">
+        This week
+        <table>
+            <tr>
+                <th>Date</th>
+                <th>Description</th>
+            </tr>
+            <tr ng-repeat="order in orderData.thisWeekOrders">
+                <td>{{order.date | date:'EEEE, dd.MM.yyyy'}}</td>
+                <td>
+                    <select ng-model="order.description"
+                            ng-options="desc for desc in orderData.availableOrderDescriptions">
+                        <option value=""></option>
+                    </select>
+                </td>
+            </tr>
+        </table>
+        <button ng-click="saveOrders(orderData.thisWeekOrders)">Save</button>
+        <button ng-click="sendThisWeekEmail()">Send email</button>
+    </div>
 
     Next week
     <table>
