Disable select for order selection the day before order date after 17 o'clock

--- a/web/partials/orders.html
+++ b/web/partials/orders.html
@@ -13,7 +13,8 @@
                 <td>{{order.date | date:'EEEE, dd.MM.yyyy'}}</td>
                 <td>
                     <select ng-model="order.description"
-                            ng-options="desc for desc in orderData.availableOrderDescriptions">
+                            ng-options="desc for desc in orderData.availableOrderDescriptions"
+                            ng-disabled="isOrderDisabled(order)">
                         <option value=""></option>
                     </select>
                 </td>
